8264138: Replace uses of Class.newInstance
Reviewed-by: kcr